# falkon

./: .buildinfo  .flake8  .gitignore  .gitmodules  .travis.yml  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  README.md  codecov.yml  genindex.html  get_started.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.circleci/: config.yml
_sources/: get_started.rst.txt  index.rst.txt  install.rst.txt
api_reference/: center_selector.html  gsc_losses.html  hopt.html  index.html  kernels.html  mmv_ops.html  models.html  optimization.html  options.html  outofcore.html  preconditioner.html  sparse.html
benchmark/: benchmark_flights.sh  benchmark_flights_cls.sh  benchmark_flk_1gpu.sh  benchmark_higgs.sh  benchmark_millionsongs.sh  benchmark_mnist.sh  benchmark_runner.py  benchmark_susy.sh  benchmark_taxi.sh  benchmark_utils.py  datasets.py  error_metrics.py  gpflow_model.py  gpytorch_variational_models.py  lauum_timings.py  lauum_timings.sh  mmv_timings.py  mmv_timings.sh  potrf_timings.py  potrf_timings.sh  time_improvements.py  time_improvements.sh
doc/: Makefile  conf.py  doc-requirements.txt  get_started.rst  index.rst  install.rst
examples/: custom_kernels.html  custom_kernels.ipynb  examples.html  falkon_cv.html  falkon_cv.ipynb  falkon_mnist.html  falkon_mnist.ipynb  falkon_regression_tutorial.html  hyperopt.html  hyperopt.ipynb  hyperparameter_tuning.html  hyperparameter_tuning.ipynb  logistic_falkon.html  logistic_falkon.ipynb  performance_tuning.html  simple_regression.html
falkon/: __init__.py  center_selection.py  falkon.py  fmmv_test.py  gsc_losses.py  logistic_falkon.py  options.py  simple_logistic_falkon.py
notebooks/: Airlines.ipynb  BatchKernels.ipynb  CreateSmallHiggs.ipynb  FalkonRegression.ipynb  NycTaxiDataset.ipynb  ParallelInference.ipynb  SVM Comparison.ipynb  UciDatasets.ipynb  falkon_colab.ipynb  uci_datasets_download.py
scripts/: build_docker.sh  build_docs.sh  build_falkon.sh  conda.sh  cuda.sh  install_cmake.sh  install_cuda.sh  (+3 more)
(+325 files in other folders)
